k8/image-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-api
  labels:
    app: image-api
spec:
  ports:
    - port: 3002
      name: image-api-port
      protocol: TCP
  selector:
    app: image-api
