k8/image-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: image-api
  annotations:
    kubernetes.io/ingress.global-static-ip-name: static-image-api-ip
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: image-api
            port:
              number: 80
